# night-chat-app

client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/api/: roomApi.ts  userApi.ts
client/src/components/: Chat.tsx  NewRoom.tsx  RoomList.tsx  Root.tsx  UserName.tsx
client/src/styles/: Chat.css  NewRoom.css  RoomList.css  Root.css  UserName.css
client/src/types/: chat.ts  room.ts  user.ts
server/: Cargo.toml  Dockerfile  compose.yml  index.html  user.html
server/src/: app.rs  app_state.rs  auth.rs  controllers.rs  handlers.rs  main.rs  middleware.rs  models.rs  rooms.rs  router.rs  session.rs  utility.rs  websocket.rs
server/src/auth/: handler.rs
server/src/controllers/: auth.rs  rooms.rs  user_name.rs  view.rs  websocket.rs
server/src/middleware/: auth.rs  session.rs  time_limit.rs
server/src/models/: rooms.rs  user_name.rs  websocket.rs
