[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["ws"] }
axum-session-manager = "0.1.1"
dotenvy = "0.15.7"
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["mysql"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
